<resources>
    <string name="app_name">Hotels2</string>
    <string name="essentials">Самое необходимое</string>
    <string name="to_choose_number">К выбору номера</string>
    <string name="choose_number">Выбрать номер</string>
    <string name="hotel">Отель</string>
    <string name="reservation">Бронирование</string>
    <string name="party_popper">🎉</string>
    <string name="confirmation_of_an_order">Подтверждение заказа №%1$d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="order_has_been_paid">Заказ оплачен</string>
    <string name="great">Супер!</string>
    <string name="rating">%1$d %2$s</string>
    <string name="minimal_price">от %1$d ₽</string>
    <string name="email">Почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="policy">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="to_pay">К оплате</string>
    <string name="departure">Вылет из</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="buyer_information">Информация о покупателе</string>
    <string name="date">%1$s – %2$s</string>
    <string name="nights">%1$d ночей</string>
    <string name="tour_price">%1$d ₽</string>
    <string name="charge">%1$d ₽</string>
    <string name="incorrect_mail">Некорректная почта</string>
    <string name="incorrect_phone_number">Некорректный номер телефона</string>
    <string name="incorrect_date_birth">Некорректная дата рождения</string>
    <string name="paid_price">Оплатить %1$d ₽</string>
    <string name="please_fill_out_all_fields_correctly">Пожалуйста, заполните все поля корректно.</string>
    <string name="fields_cannot_be_empty">Поля, не могут быть пустыми.</string>
    <string name="counts_tourists">%1$s турист</string>
    <string name="first">Первый</string>
    <string name="second">Второй</string>
    <string name="third">Третий</string>
    <string name="fourth">Четвертый</string>
    <string name="fifth">Пятый</string>
    <string name="unknown">Неизвестный</string>
    <string name="your_order_has_been_processed">Ваш заказ принят в работу</string>
    <string name="about_the_hotel">Об отеле</string>
    <string name="facilities">Удобства</string>
    <string name="what_included">Что включено</string>
    <string name="what_not_included">Что не включено</string>
    <string name="more_details_about_the_room">Подробнее о номере</string>
    <string name="name">Имя</string>
    <string name="sure_name">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="validity_period_of_passport">Срок действия загранпаспорта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>