<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/cl_slider_image"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="258dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/radius_bg_indicator"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            app:ci_drawable="@drawable/selected_indicator"
            app:ci_drawable_unselected="@drawable/unselected_indicator"
            app:ci_gravity="center"
            app:ci_height="7dp"
            app:ci_width="7dp"
            app:layout_constraintBottom_toBottomOf="@id/viewPager2"
            app:layout_constraintEnd_toEndOf="@id/viewPager2"
            app:layout_constraintStart_toStartOf="@id/viewPager2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_bg_bottom"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_slider_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rating_corner"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/tv_rating"
                android:drawablePadding="2dp"
                android:textColor="@color/orange"
                android:textSize="16sp"
                style="@style/BaseTextView"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_name"
            style="@style/BaseTextView"
            android:layout_marginTop="8dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_adress"
            android:layout_marginTop="8dp"
            style="@style/BaseTextView"
            android:textColor="@color/blue"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                style="@style/BaseTextView"
                android:id="@+id/tv_minimal_price"
                android:fontFamily="@font/ff_sf_pro_display_bold"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_price_for_it"
                style="@style/TextViewRegularGray"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius_bg"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/ll_top">

        <TextView
            android:layout_marginTop="16dp"
            android:text="@string/about_the_hotel"
            style="@style/BaseTextView"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hotels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/BaseTextView"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ff_sf_pro_display_regular"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="22dp">

                <ImageView
                    android:id="@+id/iv_facilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facilities"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:id="@+id/ll_tv_facilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/iv_facilities"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_marginStart="12dp"
                        android:text="@string/facilities"
                        style="@style/BaseTextView"
                        android:textColor="@color/black_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_marginStart="12dp"
                        android:text="@string/essentials"
                        android:textColor="@color/gray"
                        style="@style/BaseTextView"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray_hex15"
                    app:layout_constraintEnd_toEndOf="@id/ib_next"
                    app:layout_constraintStart_toStartOf="@id/ll_tv_facilities"
                    app:layout_constraintTop_toBottomOf="@id/ll_tv_facilities" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/iv_check_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_check_mark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:id="@+id/ll_tv_check_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/iv_check_mark"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_marginStart="12dp"
                        style="@style/BaseTextView"
                        android:text="@string/what_included"
                        android:textColor="@color/black_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_marginStart="12dp"
                        style="@style/BaseTextView"
                        android:text="@string/essentials"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_next2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray_hex15"
                    app:layout_constraintEnd_toEndOf="@id/ib_next2"
                    app:layout_constraintStart_toStartOf="@id/ll_tv_check_mark"
                    app:layout_constraintTop_toBottomOf="@id/ll_tv_check_mark" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/iv_cross"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cross"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:id="@+id/ll_tv_cross"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@id/iv_cross"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_marginStart="12dp"
                        style="@style/BaseTextView"
                        android:text="@string/what_not_included"
                        android:textColor="@color/black_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_marginStart="12dp"
                        style="@style/BaseTextView"
                        android:text="@string/essentials"
                        android:textColor="@color/gray"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_next3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
